# raster-buffet

./: .gitignore  Makefile.am  README  configure.ac
examples/: foo.txt  run.sh  simple-io.sh
scripts/: Makefile.am  aeps_easy.in
src/: Makefile.am  image.h  main.c  plugin.c  plugin.h
src/plugins/: Makefile.am  artistic.c  edges.c  freeimage.c  rbswscale.c  simple_output.c  simpleio.c  swscale.c  v4l2.c
